Fix animation on mobile screens.

--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -242,7 +242,7 @@
     text-align: left;
   }
   .herohang-down {
-    visibility: hidden;
+    display: none;
   }
 }
 @media (max-width: 768px) {
