--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,14 +9,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   /* hide scrollbar but allow scrolling */
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll;
-  &::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-  }
+  // -ms-overflow-style: none;
+  // //   for Internet Explorer, Edge
+  // scrollbar-width: none;
+  // // for Firefox
+  // overflow-y: scroll;
+  // &::-webkit-scrollbar {
+  //   // for Chrome, Safari, and Opera
+  //   display: none;
+  // }
 }
 
 h1,
